# ur_tool

./: README.md
ur10_with_tool/: CMakeLists.txt  package.xml
ur10_with_tool/launch/: ur10_upload.launch  view_ur10.launch
ur10_with_tool/meshes/collision/: biotac_fixture.stl
ur10_with_tool/meshes/visual/: biotac_fixture.dae
ur10_with_tool/urdf/: fixture.xacro  ur10_joint_limited_robot.urdf.xacro  ur10_robot.urdf.xacro
ur10_with_tool_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur10_with_tool_moveit_config/config/: ur10.srdf
ur10_with_tool_moveit_config/launch/: arclab.rviz  default_warehouse_db.launch  demo.launch  gazebo.launch  move_group.launch  moveit_rviz.launch  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur10_moveit_planning_execution.launch  ur10_with_tool.launch  ur10_with_tool_joint_limited.launch  warehouse.launch
ur10_with_tool_moveit_config/tests/: moveit_planning_execution.xml
