cmake_minimum_required(VERSION 3.0.2)
project(ur10_with_tool)
find_package(catkin REQUIRED)
catkin_package()
include_directories()
install(DIRECTORY launch DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
install(DIRECTORY urdf DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
install(DIRECTORY meshes DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
